--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 
 [tox]
-envlist = py27
+envlist = py27,py34
 
 [testenv]
-commands = py.test
+commands = py.test tests
 deps =
+    future
     pytest
     jinja2
-    Cheetah
     Django
 
 [pytest]
