update setup, add travis

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
-include config/VERSION
+include LICENSE.txt
+recursive-include facsimile *.txt
+recursive-include twentyc *.py
+include facsimile/VERSION
