--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,12 @@
 
 [tox]
-envlist = py27,py34
+envlist = py{27,34,35,36}
 
 [testenv]
-commands = py.test tests
-deps =
-    future
-    pytest
-    jinja2
-    Django
+passenv = CI TRAVIS*
+commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/twentyc
+deps = -r{toxinidir}/facsimile/requirements.txt
+       -r{toxinidir}/facsimile/requirements-test.txt
 
 [pytest]
 norecursedirs = .facsimile data gen .tox
