--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE.txt
 recursive-include facsimile *.txt
-recursive-include twentyc *.py
+recursive-include tmpl *.py
 include facsimile/VERSION
