--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{27,34,35,36}
 
 [testenv]
 passenv = CI TRAVIS*
-commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/twentyc
+commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
 deps = -r{toxinidir}/facsimile/requirements.txt
        -r{toxinidir}/facsimile/requirements-test.txt
 
