--- a/tox.ini
+++ b/tox.ini
@@ -35,4 +35,6 @@ python =
     3.9: py39
 
 [pytest]
+# django modules need testing
+# DJANGO_SETTINGS_MODULE = test_settings
 norecursedirs = .facsimile data gen .tox
