--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: system
         name: isort
-        entry: poetry run isort .
+        entry: poetry run isort src/
         language: system
         pass_filenames: false
   - repo: local
@@ -18,13 +18,13 @@ repos:
     hooks:
       - id: system
         name: Black
-        entry: poetry run black .
+        entry: poetry run black src/
         language: system
         pass_filenames: false
   - repo: local
     hooks:
       - id: system
         name: flake8
-        entry: poetry run flake8 .
+        entry: poetry run flake8 src/
         language: system
         pass_filenames: false
