--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,40 @@
-
 [tox]
-envlist = py{27,34,35,36}
+envlist = py{36,37,38,39}
+isolated_build = True
 
 [testenv]
 passenv = CI TRAVIS*
-commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
-deps = -r{toxinidir}/facsimile/requirements.txt
-       -r{toxinidir}/facsimile/requirements-test.txt
+deps =
+    -r{toxinidir}/Ctl/requirements-test.txt
+
+commands =
+#    poetry install -v
+#    poetry run pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
+    pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
+
+[flake8]
+extend-ignore = E501
+exclude = [
+    .git,
+    .venv,
+    .tox,
+    __pycache__,
+    build,
+    dist
+  ]
+
+max-line-length = 80
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
 [pytest]
+# django modules need testing
+# DJANGO_SETTINGS_MODULE = test_settings
 norecursedirs = .facsimile data gen .tox
