--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ pyupgrade = "^2.19.4"
 # ctl
 ctl = "^1"
 jinja2 = "^2"
+twine = "^3.4.1"
 
 [tool.poetry.plugins."markdown.extensions"]
 pymdgen = "pymdgen.md:Extension"
