--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,37 +24,40 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<4.0"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-# test
-pytest = ">=6.0.1"
-pytest-django = ">=3.8.0"
+# testing
+coverage = ">=5"
+pytest = ">=6"
+pytest-django = ">=3.8"
 pytest-cov = "*"
 
-# lint
-black = {version = ">=20", allow-prereleases = true}
-isort = "^5.7.0"
-flake8 = "^3.8.4"
-pre-commit = "^2.13.0"
-pyupgrade = "^2.19.4"
+# linting
+ruff = ">=0.1"
+black = ">=20"
+isort = ">=5.7"
+flake8 = ">=3.8"
+mypy = ">=0.950"
+pre-commit = ">=2.13"
+pyupgrade = ">=2.19"
 
 # docs
-# markdown = "*"
-# markdown-include = ">=0.5,<1"
-# mkdocs = ">=1.0.0,<2.0.0"
+markdown = "*"
+markdown-include = ">=0.5,<1"
+mkdocs = "^1.2.3"
 
 # ctl
-ctl = "^1"
-jinja2 = "^2"
-twine = "^3.4.1"
+ctl = ">=1"
+jinja2 = ">=2"
+twine = ">=3"
 
 [tool.poetry.plugins."markdown.extensions"]
 pymdgen = "pymdgen.md:Extension"
 
 [build-system]
-requires = [ "poetry>=0.12",]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
