--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,28 @@
+fail_fast: false
+exclude: |
+  (?x)^(
+      tests/data/.*
+  )$
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: check-yaml
+      - id: trailing-whitespace
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.14
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [--fix]
+      # Run the formatter.
+      - id: ruff-format
   - repo: local
     hooks:
-      - id: system
-        name: isort
-        entry: poetry run isort src/
-        language: system
-        pass_filenames: false
-  - repo: local
-    hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
         name: pyupgrade
         entry: poetry run pyupgrade --py38-plus
         language: python
         types: [python]
         pass_filenames: true
-  - repo: local
-    hooks:
-      - id: system
-        name: Black
-        entry: poetry run black src/
-        language: system
-        pass_filenames: false
-  - repo: local
-    hooks:
-      - id: system
-        name: flake8
-        entry: poetry run flake8 src/
-        language: system
-        pass_filenames: false
