--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,29 +4,29 @@ version = "1.0.0"
 description = "Template abstraction for using multiple template engine backends in same code."
 repository = "https://github.com/20c/tmpl"
 readme = "README.md"
-authors = [ "20C <code@20c.com>",]
+authors = ["20C <code@20c.com>"]
 license = "Apache-2.0"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: Apache Software License", 
-  "Programming Language :: Python :: 3", 
-  "Programming Language :: Python :: 3.6", 
-  "Programming Language :: Python :: 3.7", 
-  "Programming Language :: Python :: 3.8", 
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
-  "Topic :: Software Development", 
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Topic :: Software Development",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
-packages = [
-    { include = "tmpl", from = "src" },
-]
+packages = [{ include = "tmpl", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+jinja2 = ">=2"
+
 # testing
 coverage = ">=5"
 pytest = ">=6"
@@ -35,9 +35,6 @@ pytest-cov = "*"
 
 # linting
 ruff = ">=0.1"
-black = ">=20"
-isort = ">=5.7"
-flake8 = ">=3.8"
 mypy = ">=0.950"
 pre-commit = ">=2.13"
 pyupgrade = ">=2.19"
@@ -45,20 +42,19 @@ pyupgrade = ">=2.19"
 # docs
 markdown = "*"
 markdown-include = ">=0.5,<1"
-mkdocs = "^1.2.3"
+mkdocs = ">=1.2.3"
 
 # ctl
 ctl = ">=1"
-jinja2 = ">=2"
 twine = ">=3"
 
 [tool.poetry.plugins."markdown.extensions"]
 pymdgen = "pymdgen.md:Extension"
 
+[tool.ruff.lint]
+# Enable the isort rules.
+extend-select = ["I"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
