--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,26 @@
 [tox]
-envlist = py{36,37,38,39}
+envlist = py38,py39,py310,py311,py312
 isolated_build = True
 
+
 [testenv]
-passenv = CI TRAVIS*
-deps =
-    -r{toxinidir}/Ctl/requirements-test.txt
-
+whitelist_externals = poetry
 commands =
-#    poetry install -v
-#    poetry run pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
-    pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/tmpl
+    poetry install -v
+{% endraw %}
+    poetry run pytest -vv --cov="{toxinidir}/src" --cov-report=term-missing --cov-report=xml tests/
 
-[flake8]
-extend-ignore = E501
-exclude = [
-    .git,
-    .venv,
-    .tox,
-    __pycache__,
-    build,
-    dist
-  ]
-
-max-line-length = 80
-max-complexity = 18
-select = B,C,E,F,W,T4,B9
 
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
 
 [pytest]
 # django modules need testing
 # DJANGO_SETTINGS_MODULE = test_settings
-norecursedirs = .facsimile data gen .tox
+norecursedirs = .ctl .tox .venv data gen
