--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,58 +4,59 @@ version = "1.0.0"
 description = "Template abstraction for using multiple template engine backends in same code."
 repository = "https://github.com/20c/tmpl"
 readme = "README.md"
-authors = [ "20C <code@20c.com>",]
+authors = ["20C <code@20c.com>"]
 license = "Apache-2.0"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: Apache Software License", 
-  "Programming Language :: Python :: 3", 
-  "Programming Language :: Python :: 3.6", 
-  "Programming Language :: Python :: 3.7", 
-  "Programming Language :: Python :: 3.8", 
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
-  "Topic :: Software Development", 
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Topic :: Software Development",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
-packages = [
-    { include = "tmpl", from = "src" },
-]
+packages = [{ include = "tmpl", from = "src" }]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<4.0"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-# test
-pytest = ">=6.0.1"
-pytest-django = ">=3.8.0"
+# templating engines shouldn't be hard deps
+django = ">=1.6"
+jinja2 = ">=2"
+
+# testing
+coverage = ">=5"
+pytest = ">=6"
+pytest-django = ">=3.8"
 pytest-cov = "*"
 
-# lint
-black = {version = ">=20", allow-prereleases = true}
-isort = "^5.7.0"
-flake8 = "^3.8.4"
-pre-commit = "^2.13.0"
-pyupgrade = "^2.19.4"
+# linting
+ruff = ">=0.1"
+mypy = ">=0.950"
+pre-commit = ">=2.13"
+pyupgrade = ">=2.19"
 
 # docs
-# markdown = "*"
-# markdown-include = ">=0.5,<1"
-# mkdocs = ">=1.0.0,<2.0.0"
+markdown = "*"
+markdown-include = ">=0.5,<1"
+mkdocs = ">=1.2.3"
 
 # ctl
-ctl = "^1"
-jinja2 = "^2"
-twine = "^3.4.1"
+ctl = ">=1"
+twine = ">=3"
 
 [tool.poetry.plugins."markdown.extensions"]
 pymdgen = "pymdgen.md:Extension"
 
-[build-system]
-requires = [ "poetry>=0.12",]
-build-backend = "poetry.masonry.api"
+[tool.ruff.lint]
+# Enable the isort rules.
+extend-select = ["I"]
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
