--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,12 +1,14 @@
 Unreleased:
-  added:
-  - update deps
-  - python3.11
+  added: []
   fixed: []
   changed: []
   deprecated: []
   removed: []
   security: []
+1.1.0:
+  added:
+  - update deps
+  - python3.11
 1.0.0:
   removed:
   - python2 support
